# wasm-run

./: .gitignore  Cargo.toml  LICENSE.Apache-2.0  LICENSE.MIT  README.md  examples
.github/workflows/: main.yml  pr.yml
examples/: complex.rs  example.rs  run-an-example.rs
examples/backend-and-frontend/: .dockerignore  Cargo.toml  Dockerfile  README.md
examples/backend-and-frontend/backend/: Cargo.toml
examples/backend-and-frontend/backend/src/: lib.rs  main.rs
examples/backend-and-frontend/frontend/: Cargo.toml
examples/backend-and-frontend/frontend/src/: main.rs
examples/backend-and-frontend/run/: Cargo.toml
examples/backend-and-frontend/run/src/: main.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/bundler/: .gitignore  Cargo.toml
examples/bundler/backend/: Cargo.toml
examples/bundler/backend/src/: main.rs
examples/bundler/frontend/: Cargo.toml  README.md  index.html
examples/bundler/frontend/css/: style.scss
examples/bundler/frontend/src/: lib.rs
examples/custom-cli-command/: .dockerignore  Cargo.toml  README.md  rust-toolchain
examples/custom-cli-command/backend/: Cargo.toml
examples/custom-cli-command/frontend/src/: lib.rs
examples/custom-cli-command/run/: Cargo.toml
examples/custom-cli-command/run/src/: main.rs
examples/frontend-only/: Cargo.toml  README.md
examples/frontend-only/src/: lib.rs  main.rs
src/: bundler.rs  lib.rs  prebuilt_wasm_opt.rs
tests/: common.rs  examples.rs  test-crate.rs  test-crates.rs
tests/test-binaryen/: Cargo.toml
tests/test-bundler/: .gitignore  Cargo.toml
tests/test-bundler/backend/: Cargo.toml  build.rs
tests/test-bundler/backend/src/: main.rs
tests/test-bundler/frontend/: Cargo.toml  index.html
tests/test-bundler/frontend/css/: style.scss
tests/test-bundler/frontend/src/: lib.rs
tests/test-cargo-helper/: Cargo.toml
tests/test-cargo-helper/src/: main.rs
tests/test-crate-name-vs-pkg-name/: Cargo.toml
tests/test-default-build-path/: Cargo.toml
tests/test-default-build-path/src/: main.rs
tests/test-default-build-path/static/: index.html
tests/test-no-serve/: Cargo.toml
tests/test-no-serve/src/: main.rs
tests/test-prebuilt-wasm-opt/: Cargo.toml
tests/test-sass/: Cargo.toml
tests/test-sass/styles/: test4.scss
wasm-run/: Cargo.toml  README.md
wasm-run-proc-macro/: Cargo.toml  LICENSE.MIT  README.md
wasm-run-proc-macro/src/: attr_parser.rs  lib.rs  main_generator.rs
wasm-run/examples/: complex.rs
wasm-run/src/: lib.rs
wasm-run/tests/: test-crate.rs  ui.rs
wasm-run/tests/examples/backend-and-frontend/: Cargo.toml
wasm-run/tests/examples/backend-and-frontend/backend/: Cargo.toml
wasm-run/tests/examples/backend-and-frontend/backend/src/: main.rs
wasm-run/tests/examples/basic/: Cargo.toml
wasm-run/tests/test-crate/: Cargo.toml
wasm-run/tests/test-crate/src/: lib.rs  main.rs
wasmbl-proc-macro/: Cargo.toml
wasmbl-proc-macro/src/: attr_parser.rs  lib.rs  main_generator.rs
