[package]
name = "wasm-run"
version = "0.6.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IMI-eRnD-Be/wasm-run"
homepage = "https://github.com/IMI-eRnD-Be/wasm-run"
documentation = "https://docs.rs/wasm-run"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["wasm", "cargo"]
categories = ["development-tools::build-utils"]
description = "Build tool that replaces `cargo run` to build WASM projects"

[features]
default = ["serve", "binaryen"]
serve = ["tide", "async-std", "wasm-run-proc-macro/serve"]
full-restart = []
prebuilt-wasm-opt = ["binary-install", "platforms", "tempfile"]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.7.0", features = ["attributes"], optional = true }
binary-install = { version = "0.0.2", optional = true }
binaryen = { version = "0.12", optional = true }
cargo_metadata = "0.12.1"
downcast-rs = "1.2.0"
futures = { version = "0.3.8" } # TODO should be optional but it's breaking for some reason
notify = "4.0.12"
once_cell = "1.5.2"
platforms = { version = "1.0.3", optional = true }
structopt = "0.3"
tempfile = { version = "3.1.0", optional = true }
tide = { version = "0.15", optional = true }
wasm-bindgen-cli-support = "0.2.68"
wasm-run-proc-macro = { path = "./wasm-run-proc-macro", version = "^0.6.1"}

[workspace]
members = [
	"examples/basic",
	"tests/test-crate-name-vs-pkg-name",
	"tests/test-default-build-path",
	"wasm-run-proc-macro",
]
