[package]
name = "wasm-run"
version = "0.8.1"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IMI-eRnD-Be/wasm-run"
homepage = "https://github.com/IMI-eRnD-Be/wasm-run"
documentation = "https://docs.rs/wasm-run"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["wasm", "cargo"]
categories = ["development-tools::build-utils"]
description = "Build tool that replaces `cargo run` to build WASM projects"

[features]
default = ["serve", "prebuilt-wasm-opt"]
serve = ["tide", "async-std", "wasm-run-proc-macro/serve"]
full-restart = []
prebuilt-wasm-opt = ["binary-install", "platforms", "tempfile"]
sass = ["sass-rs", "walkdir"]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.7.0", optional = true }
binary-install = { version = "0.0.2", optional = true }
binaryen = { version = "0.12", optional = true }
cargo_metadata = "0.12.1"
downcast-rs = "1.2.0"
futures = { version = "0.3.8" } # TODO should be optional but it's breaking for some reason
fs_extra = "1.2.0"
notify = "4.0.12"
once_cell = "1.5.2"
platforms = { version = "1.0.3", optional = true }
sass-rs = { version = "0.2.2", optional = true }
structopt = "0.3"
tempfile = { version = "3.1.0", optional = true }
tide = { version = "0.15", optional = true }
walkdir = { version = "2.3.1", optional = true }
slog = "2.7"
sloggers = "1.0"
wasm-bindgen-cli-support = "0.2.68"
wasm-run-proc-macro = { path = "./wasm-run-proc-macro", version = "0.7.0"}

[workspace]
members = [
    "examples/basic",
    "tests/test-cargo-helper",
    "tests/test-crate-name-vs-pkg-name",
    "tests/test-default-build-path",
    "wasm-run-proc-macro",
]
