[package]
name = "wasmbl"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IMI-eRnD-Be/wasmbl"
homepage = "https://github.com/IMI-eRnD-Be/wasmbl"
documentation = "https://docs.rs/wasmbl"
include = ["src/**/*.rs", "README.md", "LICENSE.Apache-2.0", "LICENSE.MIT"]
keywords = ["wasm", "cargo"]
categories = ["development-tools::build-utils"]
description = "Build tool that replaces `cargo run` to build WASM projects"

[features]
default = ["mini-http-server", "prebuilt-wasm-opt"]
mini-http-server = ["tide", "async-std", "wasmbl-proc-macro/serve"]
prebuilt-wasm-opt = ["binary-install", "platforms", "tempfile"]
sass = ["sass-rs", "walkdir"]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.7.0", optional = true }
binary-install = { version = "0.0.2", optional = true }
binaryen = { version = "0.12", optional = true }
cargo_metadata = "0.12.1"
downcast-rs = "1.2.0"
futures = { version = "0.3.8" } # TODO should be optional but it's breaking for some reason
fs_extra = "1.2.0"
notify = "4.0.12"
once_cell = "1.5.2"
platforms = { version = "1.0.3", optional = true }
sass-rs = { version = "0.2.2", optional = true }
structopt = "0.3"
tempfile = { version = "3.1.0", optional = true }
tide = { version = "0.15", optional = true }
walkdir = { version = "2.3.1", optional = true }
wasm-bindgen-cli-support = "0.2.68"
wasmbl-proc-macro = { path = "./wasmbl-proc-macro", version = "0.1.0"}

# web-bundler's specific dependencies
tera = "1"
rand = "0.8"
wasm-pack = "0.9.1"

[workspace]
members = [
    "examples/frontend-only",
    "tests/test-cargo-helper",
    "tests/test-crate-name-vs-pkg-name",
    "tests/test-default-build-path",
    "wasmbl-proc-macro",
]
