[package]
name = "backend"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
structopt = "0.3"
wasm-run = { path = "../../../..", default-features = false, features = ["full-restart"] }
